# connector-templates

./: .gitignore  README.md
_mock-data/: seed.sql
_mock-data/mock_dataset/: __init__.py  __main__.py  generator.py
csharp/: Backend.cs  MockConnector.csproj  Program.cs  Service.cs
csharp/Core/: CommandHandler.cs  Config.cs  ConnectorLogger.cs  ConnectorMqRuntime.cs  IOperationExecutor.cs  MqPublisher.cs  Registration.cs  Storage.cs
java/: pom.xml
java/src/main/java/com/aurelion/connector/: Backend.java  Main.java  Service.java
java/src/main/java/com/aurelion/connector/core/: CommandHandler.java  Config.java  ConnectorLogger.java  ConnectorMqRuntime.java  MqPublisher.java  OperationExecutor.java  Registration.java  Storage.java
powershell/: backend.ps1  main.ps1  service.ps1  setup.ps1
powershell/core/: Bootstrap.ps1  Config.ps1  Handler.ps1  LoadAssemblies.ps1  Logger.ps1  MqPublisher.ps1  MqRuntime.ps1  Registration.ps1  Storage.ps1
python/: backend.py  main.py  pyproject.toml  service.py
python/core/: bootstrap.py  config.py  handler.py  logger.py  mq.py  registration.py  storage.py
python/tests/: test_db.py  test_mock_dataset.py
typescript/: package.json  pnpm-lock.yaml
typescript/src/: backend.ts  main.ts  service.ts
typescript/src/core/: bootstrap.ts  config.ts  handler.ts  index.ts  logger.ts  mqPublisher.ts  mqRuntime.ts  registration.ts  storage.ts  types.ts
